--- a/students.html
+++ b/students.html
@@ -39,17 +39,19 @@ label{display:block;margin-bottom:6px;font-size:13px;color:#37474f}
 table{width:100%;border-collapse:collapse;margin-top:12px}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px}
 th{background:var(--primary);color:#fff}
-.actions button{margin:0 6px}
+.actions button{margin:0 4px}
 .badge{display:inline-block;padding:4px 8px;border-radius:999px;background:#eef6ff;color:var(--primary);font-weight:700}
 .modal { position:fixed; left:0; top:0; right:0; bottom:0; background:rgba(0,0,0,0.45); display:none; align-items:center; justify-content:center; z-index:9999;}
 .modal.open{display:flex}
 .modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto}
+.flex{display:flex;gap:8px;align-items:center}
 </style>
 </head>
 <body>
 <header>نظام OMA - إدارة الطلاب (متطور)</header>
 <div class="wrap">
 
+<!-- إضافة طالب -->
 <div class="controls">
   <div style="flex:1" class="card">
     <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
@@ -112,6 +114,7 @@ th{background:var(--primary);color:#fff}
   </div>
 </div>
 
+<!-- قائمة الطلاب -->
 <div class="card">
   <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
     <div><strong>قائمة الطلاب</strong> <span id="totalCount" class="badge">0</span></div>
@@ -124,12 +127,14 @@ th{background:var(--primary);color:#fff}
         <th>المرحلة</th>
         <th>المجموعة</th>
         <th>الأقساط</th>
+        <th>الخيارات</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 </div>
 
+<!-- مودال التفاصيل -->
 <div id="modal" class="modal" aria-hidden="true">
   <div class="box">
     <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
@@ -137,15 +142,16 @@ th{background:var(--primary);color:#fff}
       <button id="closeModal" class="btn ghost">إغلاق</button>
     </div>
     <div id="modalBody"></div>
+    <div style="text-align:center;margin-top:12px">
+      <button id="printStudentBtn" class="btn">🖨️ طباعة الاستمارة</button>
+    </div>
   </div>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// 🔹 إعداد Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
   authDomain: "oma2-d36fa.firebaseapp.com",
@@ -156,25 +162,15 @@ const firebaseConfig = {
 };
 
 const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
 const db = getFirestore(app);
 
-onAuthStateChanged(auth, (user) => {
-  if (!user) {
-    window.location.href = "login.html"; // إعادة توجيه غير مسجل
-  } else {
-    document.body.style.visibility = "visible"; // إظهار الصفحة بعد التحقق
-    loadStudents();
-  }
-});
-
-// إضافة طالب
 const studentForm = document.getElementById("studentForm");
+const studentsTableBody = document.querySelector("#studentsTable tbody");
 const subjectsContainer = document.getElementById("subjectsContainer");
 const addSubjectBtn = document.getElementById("addSubjectBtn");
-const studentsTableBody = document.querySelector("#studentsTable tbody");
 let studentsData = [];
 
+// إضافة مادة
 addSubjectBtn.addEventListener("click",()=>{
   const div = document.createElement("div");
   div.classList.add("subject-field");
@@ -182,13 +178,30 @@ addSubjectBtn.addEventListener("click",()=>{
   div.innerHTML = `
     <input type="text" placeholder="اسم المادة" class="subjName" required />
     <input type="number" placeholder="إجمالي القسط" class="subjFee" min="0" />
+    <input type="number" placeholder="المتبقي" class="subjRemaining" min="0" />
+    <button type="button" class="btn small addPaymentBtn">💰 دفع</button>
     <button type="button" class="btn warn small removeSubjBtn">❌</button>
   `;
   subjectsContainer.appendChild(div);
 
   div.querySelector(".removeSubjBtn").addEventListener("click",()=>{subjectsContainer.removeChild(div);});
+
+  div.querySelector(".addPaymentBtn").addEventListener("click",()=>{
+    const payment = prompt("أدخل المبلغ المدفوع:");
+    if(payment && !isNaN(payment)){
+      const date = new Date().toLocaleDateString();
+      const remainingInput = div.querySelector(".subjRemaining");
+      const currentRemaining = parseFloat(remainingInput.value)||0;
+      const newRemaining = currentRemaining - parseFloat(payment);
+      remainingInput.value = newRemaining>=0?newRemaining:0;
+      if(!div.payments) div.payments=[];
+      div.payments.push({amount:parseFloat(payment),date});
+      alert("تم تسجيل الدفعة: "+payment+" بتاريخ "+date);
+    }
+  });
 });
 
+// حفظ طالب
 studentForm.addEventListener("submit", async(e)=>{
   e.preventDefault();
   const name = document.getElementById("name").value.trim();
@@ -204,7 +217,9 @@ studentForm.addEventListener("submit", async(e)=>{
   document.querySelectorAll(".subject-field").forEach(sub=>{
     const subjName = sub.querySelector(".subjName").value.trim();
     const subjFee = parseFloat(sub.querySelector(".subjFee").value)||0;
-    if(subjName) subjects.push({name:subjName,fee:subjFee});
+    const subjRemaining = parseFloat(sub.querySelector(".subjRemaining").value)||0;
+    const payments = sub.payments || [];
+    if(subjName) subjects.push({name:subjName,fee:subjFee,remaining:subjRemaining,payments});
   });
 
   if(subjects.length===0){ alert("أضف مادة واحدة على الأقل"); return;}
@@ -232,12 +247,49 @@ async function loadStudents(){
       <td>${student.phone}</td>
       <td>${student.stage}</td>
       <td>${student.group}</td>
-      <td>${student.subjects.map(s=>"المادة:"+s.name+" / القسط:"+s.fee).join("<br>")}</td>
+      <td>${student.subjects.map(s=>"المادة:"+s.name+" / المتبقي:"+s.remaining).join("<br>")}</td>
+      <td class="actions">
+        <button class="btn small" onclick="showStudent('${student.id}')">🔍 التفاصيل</button>
+        <button class="btn warn small" onclick="deleteStudent('${student.id}')">🗑️ حذف</button>
+      </td>
     `;
     studentsTableBody.appendChild(tr);
   });
   document.getElementById("totalCount").innerText=studentsData.length;
+  document.body.style.visibility="visible";
 }
+
+// حذف طالب
+window.deleteStudent = async function(id){
+  if(confirm("هل تريد حذف الطالب؟")){
+    await deleteDoc(doc(db,"students",id));
+    loadStudents();
+  }
+}
+
+// عرض التفاصيل في مودال
+window.showStudent = function(id){
+  const student = studentsData.find(s=>s.id===id);
+  if(!student) return;
+  const modal = document.getElementById("modal");
+  const body = document.getElementById("modalBody");
+  body.innerHTML=`<h3>${student.name}</h3>
+    <p>الهاتف: ${student.phone}</p>
+    <p>المرحلة: ${student.stage}</p>
+    <p>المجموعة: ${student.group}</p>
+    <p>العنوان: ${student.address}</p>
+    <p>ملاحظات: ${student.note}</p>
+    <h4>المواد والأقساط:</h4>
+    ${student.subjects.map(s=>{
+      return `<b>${s.name}</b> - إجمالي القسط: ${s.fee} - المتبقي: ${s.remaining}<br>
+      الدفعات:<br>${s.payments.map(p=>p.amount+" بتاريخ "+p.date).join("<br>")}`;
+    }).join("<hr>")}`;
+  modal.classList.add("open");
+}
+
+// إغلاق المودال
+document.getElementById("closeModal").addEventListener("click",()=>{document.getElementById("modal").classList.remove("open")});
+
 </script>
 </body>
 </html>
