--- a/students.html
+++ b/students.html
@@ -39,12 +39,11 @@ label{display:block;margin-bottom:6px;font-size:13px;color:#37474f}
 table{width:100%;border-collapse:collapse;margin-top:12px}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px}
 th{background:var(--primary);color:#fff}
-.actions button{margin:0 4px}
+.actions button{margin:0 6px}
 .badge{display:inline-block;padding:4px 8px;border-radius:999px;background:#eef6ff;color:var(--primary);font-weight:700}
 .modal { position:fixed; left:0; top:0; right:0; bottom:0; background:rgba(0,0,0,0.45); display:none; align-items:center; justify-content:center; z-index:9999;}
 .modal.open{display:flex}
 .modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto}
-.flex{display:flex;gap:8px;align-items:center}
 </style>
 </head>
 <body>
@@ -53,10 +52,13 @@ th{background:var(--primary);color:#fff}
 
 <div class="controls">
   <div style="flex:1" class="card">
-    <div>
-      <strong>أضف طالب جديد</strong>
-      <div style="font-size:13px;color:#546e7a">املأ الحقول ثم اضغط حفظ</div>
+    <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
+      <div>
+        <strong>أضف طالب جديد</strong>
+        <div style="font-size:13px;color:#546e7a">املأ الحقول ثم اضغط حفظ</div>
+      </div>
     </div>
+
     <form id="studentForm" style="margin-top:12px">
       <div class="form-grid">
         <div class="two">
@@ -83,6 +85,7 @@ th{background:var(--primary);color:#fff}
           <label>المجموعة / الكروب</label>
           <input id="group" type="text" placeholder="مثال: A أو 101" />
         </div>
+
         <div style="width:100%">
           <label>المواد (أضف أكثر من مادة)</label>
           <div id="subjectsContainer" style="display:flex;flex-wrap:wrap;gap:8px"></div>
@@ -90,6 +93,7 @@ th{background:var(--primary);color:#fff}
             <button id="addSubjectBtn" type="button" class="btn ghost small add-subj">➕ إضافة مادة</button>
           </div>
         </div>
+
         <div class="two">
           <label>إجمالي الأقساط (اختياري)</label>
           <input id="totalFees" type="number" min="0" />
@@ -98,6 +102,7 @@ th{background:var(--primary);color:#fff}
           <label>ملاحظة / وصف الطالب</label>
           <input id="note" type="text" />
         </div>
+
         <div style="width:100%;display:flex;gap:8px;justify-content:flex-end">
           <button id="saveStudentBtn" class="btn" type="submit">✅ حفظ الطالب</button>
           <button id="clearFormBtn" type="button" class="btn ghost">مسح الحقول</button>
@@ -119,7 +124,6 @@ th{background:var(--primary);color:#fff}
         <th>المرحلة</th>
         <th>المجموعة</th>
         <th>الأقساط</th>
-        <th>الخيارات</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -133,32 +137,42 @@ th{background:var(--primary);color:#fff}
       <button id="closeModal" class="btn ghost">إغلاق</button>
     </div>
     <div id="modalBody"></div>
-    <div style="text-align:center;margin-top:12px">
-      <button id="printStudentBtn" class="btn">🖨️ طباعة الاستمارة</button>
-    </div>
   </div>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
+// 🔹 إعداد Firebase
 const firebaseConfig = {
-  apiKey: "API_KEY_HERE",
-  authDomain: "PROJECT_ID.firebaseapp.com",
-  projectId: "PROJECT_ID",
-  storageBucket: "PROJECT_ID.appspot.com",
-  messagingSenderId: "SENDER_ID",
-  appId: "APP_ID"
+  apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
+  authDomain: "oma2-d36fa.firebaseapp.com",
+  projectId: "oma2-d36fa",
+  storageBucket: "oma2-d36fa.appspot.com",
+  messagingSenderId: "774171603105",
+  appId: "1:774171603105:web:91f2a5f44c4dde684080e0"
 };
 
 const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
 const db = getFirestore(app);
 
+onAuthStateChanged(auth, (user) => {
+  if (!user) {
+    window.location.href = "login.html"; // إعادة توجيه غير مسجل
+  } else {
+    document.body.style.visibility = "visible"; // إظهار الصفحة بعد التحقق
+    loadStudents();
+  }
+});
+
+// إضافة طالب
 const studentForm = document.getElementById("studentForm");
-const studentsTableBody = document.querySelector("#studentsTable tbody");
 const subjectsContainer = document.getElementById("subjectsContainer");
 const addSubjectBtn = document.getElementById("addSubjectBtn");
+const studentsTableBody = document.querySelector("#studentsTable tbody");
 let studentsData = [];
 
 addSubjectBtn.addEventListener("click",()=>{
@@ -168,25 +182,11 @@ addSubjectBtn.addEventListener("click",()=>{
   div.innerHTML = `
     <input type="text" placeholder="اسم المادة" class="subjName" required />
     <input type="number" placeholder="إجمالي القسط" class="subjFee" min="0" />
-    <input type="number" placeholder="المتبقي" class="subjRemaining" min="0" />
-    <button type="button" class="btn small addPaymentBtn">💰 دفع</button>
     <button type="button" class="btn warn small removeSubjBtn">❌</button>
   `;
   subjectsContainer.appendChild(div);
-  div.querySelector(".removeSubjBtn").addEventListener("click",()=>subjectsContainer.removeChild(div));
-  div.querySelector(".addPaymentBtn").addEventListener("click",()=>{
-    const payment = prompt("أدخل المبلغ المدفوع:");
-    if(payment && !isNaN(payment)){
-      const date = new Date().toLocaleDateString();
-      const remainingInput = div.querySelector(".subjRemaining");
-      const currentRemaining = parseFloat(remainingInput.value)||0;
-      const newRemaining = currentRemaining - parseFloat(payment);
-      remainingInput.value = newRemaining>=0?newRemaining:0;
-      if(!div.payments) div.payments=[];
-      div.payments.push({amount:parseFloat(payment),date});
-      alert("تم تسجيل الدفعة: "+payment+" بتاريخ "+date);
-    }
-  });
+
+  div.querySelector(".removeSubjBtn").addEventListener("click",()=>{subjectsContainer.removeChild(div);});
 });
 
 studentForm.addEventListener("submit", async(e)=>{
@@ -204,9 +204,7 @@ studentForm.addEventListener("submit", async(e)=>{
   document.querySelectorAll(".subject-field").forEach(sub=>{
     const subjName = sub.querySelector(".subjName").value.trim();
     const subjFee = parseFloat(sub.querySelector(".subjFee").value)||0;
-    const subjRemaining = parseFloat(sub.querySelector(".subjRemaining").value)||0;
-    const payments = sub.payments || [];
-    if(subjName) subjects.push({name:subjName,fee:subjFee,remaining:subjRemaining,payments});
+    if(subjName) subjects.push({name:subjName,fee:subjFee});
   });
 
   if(subjects.length===0){ alert("أضف مادة واحدة على الأقل"); return;}
@@ -220,6 +218,7 @@ studentForm.addEventListener("submit", async(e)=>{
   }catch(err){console.error(err);alert("خطأ أثناء الحفظ");}
 });
 
+// تحميل الطلاب
 async function loadStudents(){
   const snapshot = await getDocs(collection(db,"students"));
   studentsTableBody.innerHTML="";
@@ -233,46 +232,12 @@ async function loadStudents(){
       <td>${student.phone}</td>
       <td>${student.stage}</td>
       <td>${student.group}</td>
-      <td>${student.subjects.map(s=>"المادة:"+s.name+" / المتبقي:"+s.remaining).join("<br>")}</td>
-      <td class="actions">
-        <button class="btn small" onclick="showStudent('${student.id}')">🔍 التفاصيل</button>
-        <button class="btn warn small" onclick="deleteStudent('${student.id}')">🗑️ حذف</button>
-      </td>
+      <td>${student.subjects.map(s=>"المادة:"+s.name+" / القسط:"+s.fee).join("<br>")}</td>
     `;
     studentsTableBody.appendChild(tr);
   });
   document.getElementById("totalCount").innerText=studentsData.length;
-  document.body.style.visibility="visible";
 }
-
-window.deleteStudent = async function(id){
-  if(confirm("هل تريد حذف الطالب؟")){
-    await deleteDoc(doc(db,"students",id));
-    loadStudents();
-  }
-}
-
-window.showStudent = function(id){
-  const student = studentsData.find(s=>s.id===id);
-  if(!student) return;
-  const modal = document.getElementById("modal");
-  const body = document.getElementById("modalBody");
-  body.innerHTML=`<h3>${student.name}</h3>
-    <p>الهاتف: ${student.phone}</p>
-    <p>المرحلة: ${student.stage}</p>
-    <p>المجموعة: ${student.group}</p>
-    <p>العنوان: ${student.address}</p>
-    <p>ملاحظات: ${student.note}</p>
-    <h4>المواد والأقساط:</h4>
-    ${student.subjects.map(s=>{
-      return `<b>${s.name}</b> - إجمالي القسط: ${s.fee} - المتبقي: ${s.remaining}<br>
-      الدفعات:<br>${s.payments.map(p=>p.amount+" بتاريخ "+p.date).join("<br>")}`;
-    }).join("<hr>")}`;
-  modal.classList.add("open");
-}
-
-document.getElementById("closeModal").addEventListener("click",()=>{document.getElementById("modal").classList.remove("open")});
-
 </script>
 </body>
 </html>
